fix summary on mobile

--- a/source/stylesheets/_post_summary.scss
+++ b/source/stylesheets/_post_summary.scss
@@ -13,6 +13,7 @@
     div {
       display: flex;
       align-items: center;
+      max-width: 100%;
 
       img {
         display: block;
